--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ torch==1.9.0
 torchvision==0.10.0
 tensorboard-logger==0.1.0
 yacs
-wandb
+wandb=0.15.11 # legacy bug fix 0.15.12 will throw error
 tqdm
 tensorboardX
